add openai api & more styling

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-web-browser": "~14.2.0",
     "lodash.debounce": "^4.0.8",
     "nativewind": "^4.1.23",
+    "openai": "^5.12.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -41,7 +42,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
