--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.4",
     "expo-splash-screen": "~0.30.10",
@@ -30,6 +31,7 @@
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "lodash.debounce": "^4.0.8",
+    "moti": "^0.30.0",
     "nativewind": "^4.1.23",
     "openai": "^5.12.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
